force-app/main/default/objects/ServiceAppointment/fields/Cargo_Firmante__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Firmante__c</fullName>
    <label>Cargo del Firmante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>