force-app/main/default/objects/ServiceAppointment/fields/Cita_Padre__c.field-meta.xml
<CustomField>
    <fullName>Cita_Padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cita Padre</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Citas de servicios (Cita Padre)</relationshipLabel>
    <relationshipName>Citas_de_servicios</relationshipName>
    <type>Lookup</type>
</CustomField>