force-app/main/default/objects/ServiceAppointment/fields/Fecha_Verificacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Verificacion__c</fullName>
    <description>Fecha y hora en la que se verificó la cita.</description>
    <label>Fecha de Verificación</label>
    <type>DateTime</type>
</CustomField>