force-app/main/default/objects/ServiceAppointment/fields/FSL__Appointment_Grade__c.field-meta.xml
<CustomField>
    <fullName>FSL__Appointment_Grade__c</fullName>
    <label>Appointment Grade</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>