force-app/main/default/objects/ServiceAppointment/fields/FSL__GanttIcon__c.field-meta.xml
<CustomField>
    <fullName>FSL__GanttIcon__c</fullName>
    <inlineHelpText>Ingrese una URL para un icono. La URL debe terminar con un sufijo de imagen, como .png.</inlineHelpText>
    <label>Gantt Icon</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>