force-app/main/default/objects/ServiceAppointment/fields/FSL__IsFillInCandidate__c.field-meta.xml
<CustomField>
    <fullName>FSL__IsFillInCandidate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Fill In Candidate</label>
    <type>Checkbox</type>
</CustomField>