force-app/main/default/objects/ServiceAppointment/fields/FSL__MDS_Calculated_length__c.field-meta.xml
<CustomField>
    <fullName>FSL__MDS_Calculated_length__c</fullName>
    <label>Multiday Work Calculated length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>