force-app/main/default/objects/ServiceAppointment/fields/FSL__Pinned__c.field-meta.xml
<CustomField>
    <fullName>FSL__Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>