force-app/main/default/objects/ServiceAppointment/fields/FSL__Same_Day__c.field-meta.xml
<CustomField>
    <fullName>FSL__Same_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Day</label>
    <type>Checkbox</type>
</CustomField>