force-app/main/default/objects/ServiceAppointment/fields/FSL__Schedule_over_lower_priority_appointment__c.field-meta.xml
<CustomField>
    <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Over Lower Priority Appointment</label>
    <type>Checkbox</type>
</CustomField>