force-app/main/default/objects/ServiceAppointment/fields/GeoPhoto_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Accuracy__c</fullName>
    <label>Precisión GPS (m)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>