force-app/main/default/objects/ServiceAppointment/fields/GeoPhoto_Count__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Count__c</fullName>
    <label>Fotos Tomadas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>