force-app/main/default/objects/ServiceAppointment/fields/GeoPhoto_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Latitude__c</fullName>
    <label>Latitud Foto</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>