force-app/main/default/objects/ServiceAppointment/fields/GeoPhoto_Longitud__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Longitud__c</fullName>
    <label>Longitud Foto</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>