force-app/main/default/objects/ServiceAppointment/fields/GeoPhoto_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>GeoPhoto_Timestamp__c</fullName>
    <label>Fecha/Hora Foto</label>
    <type>DateTime</type>
</CustomField>