force-app/main/default/objects/ServiceAppointment/fields/IsPinned_Custom__c.field-meta.xml
<CustomField>
    <fullName>IsPinned_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la fecha de la cita está bloqueada manualmente desde la consola ODT.</description>
    <label>Bloquear Fecha (Manual)</label>
    <type>Checkbox</type>
</CustomField>