force-app/main/default/objects/ServiceAppointment/fields/Levantamiento_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Levantamiento_Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Levantamiento Técnico</label>
    <referenceTo>Levantamiento_Tecnico__c</referenceTo>
    <relationshipLabel>Citas de Servicio</relationshipLabel>
    <relationshipName>ServiceAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>