force-app/main/default/objects/ServiceAppointment/fields/Producto_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Producto_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto Relacionado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Citas de Servicio</relationshipLabel>
    <relationshipName>ServiceAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>