force-app/main/default/objects/ServiceAppointment/fields/Revisiones__c.field-meta.xml
<CustomField>
    <fullName>Revisiones__c</fullName>
    <label>Revisiones de cita de servicio</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>