force-app/main/default/objects/ServiceAppointment/fields/Tech_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tech_Notes__c</fullName>
    <description>Indicaciones específicas para esta visita técnica programada.</description>
    <label>Indicaciones Técnicas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>