force-app/main/default/objects/ServiceAppointment/fields/Tipo_de_Reporte__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Reporte__c</fullName>
    <label>Tipo de Reporte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>