force-app/main/default/objects/ServiceAppointment/fields/Verificado__c.field-meta.xml
<CustomField>
    <fullName>Verificado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la cita de servicio ha sido verificada/firmada.</description>
    <label>Verificado</label>
    <type>Checkbox</type>
</CustomField>