force-app/main/default/objects/ServiceAppointment/fields/Verificado_Por__c.field-meta.xml
<CustomField>
    <fullName>Verificado_Por__c</fullName>
    <description>Nombre del usuario interno que verificó la cita.</description>
    <label>Verificado Por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>