force-app/main/default/objects/ServiceAppointment/fields/Zonas_a_Tratar__c.field-meta.xml
<CustomField>
    <fullName>Zonas_a_Tratar__c</fullName>
    <label>Zonas a Tratar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>