force-app/main/default/objects/ServiceAppointment/validationRules/FSL__isDueDateExist.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__isDueDateExist</fullName>
    <active>false</active>
    <description>Check if DueDate field exist on service appointment.</description>
    <errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula>
    <errorDisplayField>DueDate</errorDisplayField>
    <errorMessage>DueDate field is required</errorMessage>
</ValidationRule>