force-app/main/default/objects/ServiceAppointment/validationRules/FSL__isDurationExist.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__isDurationExist</fullName>
    <active>false</active>
    <description>Check if Duration field exist on service appointment.</description>
    <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
    <errorDisplayField>Duration</errorDisplayField>
    <errorMessage>Duration field is required</errorMessage>
</ValidationRule>