force-app/main/default/objects/ServiceAppointment/validationRules/FSL__isEarliestStartTimeExist.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__isEarliestStartTimeExist</fullName>
    <active>false</active>
    <description>Check if EarliestStartTime field exist on service appointment.</description>
    <errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula>
    <errorDisplayField>EarliestStartTime</errorDisplayField>
    <errorMessage>EarliestStartTime field is required</errorMessage>
</ValidationRule>