force-app/main/default/objects/ServiceAppointment/validationRules/FSL__Same_Resource_Same_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Same_Resource_Same_Start</fullName>
    <active>false</active>
    <description>Can&apos;t be same start and same reosurce</description>
    <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
    <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
</ValidationRule>