force-app/main/default/objects/ServiceAppointment/validationRules/FSL__Schedule_End_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Schedule_End_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula>
    <errorDisplayField>SchedEndTime</errorDisplayField>
    <errorMessage>Both scheduled start and end are required</errorMessage>
</ValidationRule>