force-app/main/default/objects/ServiceAppointment/validationRules/FSL__Schedule_Start_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Schedule_Start_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula>
    <errorDisplayField>SchedStartTime</errorDisplayField>
    <errorMessage>Both scheduled start and end are required</errorMessage>
</ValidationRule>