force-app/main/default/objects/ServiceAppointment/validationRules/FSL__Service_Color_HEX_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Service_Color_HEX_Format</fullName>
    <active>false</active>
    <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
    <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
    <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
</ValidationRule>