force-app/main/default/objects/ServiceAppointment/validationRules/FSL__startTimeShouldPrecedeEndTime.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__startTimeShouldPrecedeEndTime</fullName>
    <active>false</active>
    <errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula>
    <errorDisplayField>SchedStartTime</errorDisplayField>
    <errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage>
</ValidationRule>