force-app/main/default/objects/ServiceAppointment/validationRules/FSL__Time_dependency_with_related_service.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL__Time_dependency_with_related_service</fullName>
    <active>false</active>
    <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
    <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
    <errorMessage>Please select Related Service.</errorMessage>
</ValidationRule>