force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <filterScope>Everything</filterScope>
    <label>Todas las citas de servicios</label>
</ListView>