force-app/main/default/objects/ServiceAppointment/listViews/My_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>My_ServiceAppointments</fullName>
    <filterScope>Mine</filterScope>
    <label>Mis citas de servicios</label>
</ListView>